[package]
name = "wirtbot"
version = "1.5.1"
authors = ["b-m-f <max@ehlers.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = {version = "0.2", features = ["tls"]}
serde = {version = "1.0.116", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
base64 = "0.13.0"
