[package]
name = "wirtbot"
version = "2.6.5"
authors = ["b-m-f <max@ehlers.berlin>"]
edition = "2018"

[dependencies]
tokio = { version = "1.1.0", features = ["macros", "rt-multi-thread"] }
warp = {version = "0.3", features = ["tls"]}
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
base64 = "0.13.0"
rand = "0.7"
