[package]
name = "WirtBot"
version = "1.3.0"
authors = ["b-m-f <max@ehlers.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = {version = "0.2", features = ["tls"]}
serde = {version = "1", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
ed25519-dalek = {version = "1.0.0-pre.3", features = ["serde"]}
base64 = "0.12.0"
