[package]
name = "wirt-wasm"
version = "0.2.0"
authors = ["b-m-f <max@ehlers.berlin>"]
edition = "2018"
license = "AGPL-3"

[lib]
crate-type = ["cdylib", "rlib"]



[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 'z'

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[dependencies]
wasm-bindgen = "0.2.62"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
rand = {version = "0.7.3", features=["wasm-bindgen"]}
sha2 = "0.8.1"
x25519-dalek = {version = "0.6", default-features = false, features = ["u32_backend"]}
base64 = "0.12.0"
ed25519-dalek = {version = "1.0.0-pre.3", default-features = false, features = ["serde", "batch_deterministic", "u32_backend"]}
bincode = "1.2.1"