[package]
name = "wirtbot-crypto-rust-wasm"
version = "3.8.16"
authors = ["b-m-f <max@ehlers.berlin>"]
edition = "2018"
license = "AGPL-3"
repository = "https://github.com/b-m-f/WirtBot"

[lib]
crate-type = ["cdylib", "rlib"]



[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
wasm-bindgen = "0.2.68"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
getrandom = {version = "0.2.0", features=["js"]}
sha2 = "0.9.1"
x25519-dalek = {version = "1.1", default-features = false, features = ["u32_backend"]}
base64 = "0.13.0"
ed25519-dalek = {version = "1.0.1", default-features = false, features = ["serde", "batch_deterministic", "u32_backend"]}
bincode = "1.3.1"
